# silica-mlx

./: .gitignore  CHAT.README.md  README.md  conftest.py  pyproject.toml
docs/: API.md  CHAT_CLI_OPENING.md  Makefile  P1_ACCEPTANCE.md  P1_DAY1_GATE_B.md  P2_GATE_0.md  P2_GATE_0_5.md  P2_OPENING.md  P2_PRELOAD.md  P2_UNIT_16C_2_PREP.md  P2_UNIT_16C_2_STEP_4_SKELETON.md  P2_UNIT_16C_PREP.md  P2_UNIT_16D_PREP.md  P3_BATCH_ROTATING_KV_SURVEY.md  P3_C5_3_DESIGN.md  P3_C5_OPENING.md  P3_DELTANET_SURVEY.md  P3_GEMMA4_SURVEY.md  P3_MOE_SURVEY.md  P4_5_CHUNKED_PREFILL_OPENING.md  P4_5_C_KVCODEC_OPENING.md  P5_A_REAL_OPENING.md  P5_A_U4_STORE_MIGRATION.md  P5_C2_STEP3_PPL_ROWS.md  P5_F_OPENING.md  P5_OPENING.md  PLAN.md  api-manual.md  bench.md  chat-cli.md  conf.py  index.md  overview.md  plans-index.md
docs/P3_C5_DRIFT_EXPERIMENT/: README.md  drift_qwen3_5_0_8b.json  drift_qwen3_5_0_8b_M64.json  drift_qwen3_5_0_8b_k32_M128.json  probe.py
docs/P3_C5_STATE_INVENTORY/: README.md  inventory_qwen3_5_35b_a3b.json  inventory_qwen3_5_4b.json  probe.py
docs/P5_ACCEPTANCE_SWEEP/: admission_headroom.md  all_kv_codecs.jsonl  all_kv_codecs.md  all_kv_codecs_report.md  codec_swap_neutrality.md  qwen35_4b_b_static_close.md  qwen35_4b_b_static_per_head_3seeds.jsonl  qwen35_4b_b_static_per_head_3seeds.md  real_activation_xcheck.jsonl  real_activation_xcheck.md
docs/P5_D2_INVESTIGATION/: README.md  d2a_verification_3seeds.jsonl  p5_d2_probe.py  p5_d2_probe2.py  per_head_rotation_3seeds.jsonl  per_head_rotation_3seeds.md
docs/api/: index.md  silica.bench.md  silica.chat.md  silica.core.md  silica.engine.md  silica.kvcache.md  silica.llm.md  silica.md  silica.mlx.md  silica.models.md  silica.scheduler.md  silica.server.md  silica.speculative.md  silica.vq.md  silica.weights.md
plans/: CHAT_CLI_OPENING.md  P1_DAY1_GATE_A.md  P1_DAY1_GATE_B.md  P2_GATE_0.md  P2_GATE_0_5.md  P2_OPENING.md  P2_UNIT_16C_2_STEP_4_SKELETON.md  P3_BATCH_ROTATING_KV_SURVEY.md  P3_C5_3_DESIGN.md  P3_C5_OPENING.md  P3_DELTANET_SURVEY.md  P3_GEMMA4_SURVEY.md  P3_MOE_SURVEY.md  P4_5_CHUNKED_PREFILL_OPENING.md  P4_5_C_KVCODEC_OPENING.md  P5_A_REAL_OPENING.md  P5_A_U4_STORE_MIGRATION.md  P5_C2_STEP3_PPL_ROWS.md  P5_F_OPENING.md  P5_OPENING.md  PLAN.md
plans/P3_C5_DRIFT_EXPERIMENT/: README.md  drift_qwen3_5_4b.json  probe.py
plans/P3_C5_STATE_INVENTORY/: README.md  inventory_qwen3_5_0_8b.json  probe.py
plans/P5_ACCEPTANCE_SWEEP/: admission_headroom.jsonl  admission_headroom.md  all_kv_codecs.md  all_kv_codecs_report.md  qwen35_4b_b_static_3seeds.jsonl  qwen35_4b_b_static_3seeds.md  qwen35_4b_b_static_close.md  qwen35_4b_b_static_per_head_3seeds.md  real_activation_xcheck.md
plans/P5_D2_INVESTIGATION/: README.md  p5_d2_probe3.py  p5_d2_probe4.py  per_head_rotation_3seeds.md
scripts/: acceptance_p1_mlx_lm_parity.py  b_static_per_head_qwen35_4b_3seed.py  bench.py  bench_p2_baseline.py  chat.py  chat_toolbar_demo.py  d2a_per_head_3seed.py  prepare_wikitext2_cache.py  probe_16c2_seed_and_detach.py  probe_batch_kvcache.py  probe_batch_kvcache_rebuild.py  probe_gemma4_31b_load.py  probe_gemma4_moe_load.py  probe_mlx_lm_cache.py  probe_p2_preload.py  probe_qwen3_5_27b_load.py  probe_qwen3_5_load.py  probe_qwen3_5_moe_load.py  vqbench_baseline.py
silica/: __init__.py  __main__.py
silica/bench/: __init__.py  codec_registry.py  oracles.py  ppl_oracle.py  report.py  runner.py  scenario.py  scenarios.py  vqbench_baseline.py  wikitext.py
silica/chat/: __init__.py  session.py
silica/core/: __init__.py  events.py  logger.py  profiler.py  request.py  sampler.py  sampling.py
silica/engine/: __init__.py
silica/kvcache/: __init__.py  codec.py  manager.py  paged.py  prefix.py  simple.py  store.py
silica/mlx/: runner.py  (+1 more)
tests/: test_admission_headroom_oracle_fn.py  test_batcher.py  test_batcher_admit_hybrid_heterogeneity.py  test_batcher_b_n_slice_prefill.py  test_batcher_c5_3_4_smoke.py  test_batcher_extract_hybrid_heterogeneity.py  test_batcher_extract_inserts_snapshots.py  test_batcher_hit_admission_byte_exact_oracle.py  test_batcher_hit_admission_recurrent.py  test_batcher_slice_prefill_capture.py  test_bench_cli.py  test_bench_ppl_scenarios_integration.py  test_bench_prefix_hit_decode_oracle.py  test_bench_prefix_hit_decode_runner.py  test_bench_report.py  test_bench_runner.py  test_bench_scenarios_catalog.py  test_bench_vqbench_baseline.py  test_bench_workload_kv_codec.py  test_block_tq.py  test_block_tq_real_activation_xcheck.py  test_block_tq_vqbench_xcheck.py  test_calibration.py  test_chat_cli_code_fence.py  test_chat_cli_commands.py  test_chat_cli_config.py  test_chat_cli_persistence.py  test_chat_cli_thinking_parser.py  test_chat_cli_toolbar.py  test_chat_session.py  test_cli.py  test_codec_registry.py  test_draft_engine.py  test_engine.py  test_engine_admission_reorder.py  test_engine_generate_batch.py  test_events.py  test_gemma4_adapter.py  test_gemma4_moe_adapter.py  test_interfaces.py  (+62 more)
(+41 files in other folders)
