[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silica-mlx"
version = "0.0.1"
description = "MLX-native LLM inference platform for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Xin Zhou", email = "xinchoubiology@gmail.com" }]
keywords = ["mlx", "llm", "inference", "apple-silicon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.18.0",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
serve = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "openai>=1.0",
]

[project.scripts]
silica = "silica.server.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["silica*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_lm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers"]
